users/k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: adminer
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./my-k8s-configs/
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: adminer
    spec:
      containers:
        - env:
            - name: ADMINER_DESIGN
              value: pepa-linha-dark
          image: adminer
          name: adminer
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
