users/k8s/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: haproxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./my-k8s-configs/
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: haproxy
    spec:
      containers:
        - args:
            - haproxy
            - -f
            - /usr/local/etc/haproxy/haproxy.cfg
          image: haproxy:latest
          name: haproxy
          ports:
            - containerPort: 5432
              protocol: TCP
            - containerPort: 7000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/local/etc/haproxy/haproxy.cfg
              name: haproxy-cm0
              readOnly: true
              subPath: haproxy.cfg
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: haproxy.cfg
                path: haproxy.cfg
            name: haproxy-cm0
          name: haproxy-cm0
