users/k8s/pg-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pg-master
  name: pg-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-master
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./my-k8s-configs/
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: pg-master
    spec:
      containers:
        - args:
            - patroni
            - /postgres0.yml
          image: users-microservice-pg-master:latest
          name: pg-master
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
              protocol: TCP
            - containerPort: 8008
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-master-data
      hostname: pg-master
      restartPolicy: Always
      volumes:
        - name: pg-master-data
          persistentVolumeClaim:
            claimName: pg-master-data
