users/k8s/pg-slave2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pg-slave2
  name: pg-slave2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-slave2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./my-k8s-configs/
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: pg-slave2
    spec:
      containers:
        - args:
            - patroni
            - /postgres2.yml
          image: users-microservice-pg-slave2:latest
          name: pg-slave2
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
              protocol: TCP
            - containerPort: 8008
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-slave2-data
      hostname: pg-slave2
      restartPolicy: Always
      volumes:
        - name: pg-slave2-data
          persistentVolumeClaim:
            claimName: pg-slave2-data
