users/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: api
  name: api
spec:
  type: NodePort
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
      nodePort: 30000
  selector:
    io.kompose.service: api
