users/k8s/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  type: NodePort
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
      nodePort: 30001
    - name: "7001"
      port: 7001
      targetPort: 7000
      nodePort: 30002
  selector:
    io.kompose.service: haproxy
