users/k8s/pg-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pg-master
  name: pg-master
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
    - name: "8008"
      port: 8008
      targetPort: 8008
  selector:
    io.kompose.service: pg-master
