users/k8s/zoo1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./my-k8s-configs/
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: zoo1
  name: zoo1
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    io.kompose.service: zoo1
